# Lajolla_goes_cuda

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  error.txt
images/: vol_cbox.exr  vol_cbox_teapot.exr  vol_hetvol.exr  vol_hetvol_colored.exr  volpath_test4.exr  volpath_test4_2.exr  volpath_test5.exr  volpath_test6.exr
images/HW1/: Task_mug.exr  Task_sword.exr  disney_diffuse.exr  disney_glass.exr
scenes/disney_bsdf_test/: Modern_Chair_of_mine1.xml  Sword.xml  ball.xml  disney_bsdf.xml  disney_metal.xml  mug.xml  mysword.xml  simple_sphere.xml  test.xml
scenes/disney_bsdf_test/meshes/: Backdrop.ply  Cube-Border.ply  Cube-Gold.ply  Cube-Light.ply  Cube.ply  Cube_001-Border.ply  Cube_001-Gold.ply  Cube_001-Light.ply  Cube_001.ply  Cube_002.ply  Cube_003.ply  Cube_004.ply  Cube_005.ply  Cube_006-Base.ply  Cube_006-Green.ply  Cylinder.ply  Plane-Material.001.ply  Plane-White.ply  Plane.ply  Plane_001-Gold.ply  Plane_001-Purple.ply  Plane_001.ply  Plane_003.ply  Solid_001-Bianco.ply  Solid_001-Nero.001.ply
src/: AABB.h  bvh.cpp  bvh.h  camera.cpp  camera.h  cuda_kernels.cu  cuda_kernels.h  cuda_log.h  cuda_utils.h  filter.cpp  filter.h  frame.h  image.cpp  image.h  intersection.cpp  intersection.h  lajolla.h  light.h  main.cpp  material.cpp  material.h  matrix.h  medium.cpp  medium.h  microfacet.h  mipmap.h  path_tracing.h  pcg.h  phase_function.cpp  phase_function.h  point_and_normal.h  ray.h  render.cpp  render.cu  render.h  render_cu.h  scene.cpp  scene.h  shape.cpp  shape.h  (+8 more)
src/filters/: box.inl  gaussian.inl  tent.inl
src/lights/: diffuse_area_light.inl  envmap.inl
src/materials/: disney_bsdf.inl  disney_clearcoat.inl  disney_diffuse.inl  disney_glass.inl  disney_metal.inl  disney_sheen.inl  lambertian.inl  roughdielectric.inl  roughplastic.inl
src/media/: heterogeneous.inl  homogeneous.inl
src/parsers/: load_serialized.cpp  load_serialized.h  parse_obj.cpp  parse_obj.h  parse_ply.cpp  parse_ply.h  parse_scene.cpp  parse_scene.h  parsed_light.cpp  parsed_light.h  parsed_shape.h  parsed_table_dist.h  parsed_texture.h  shape_utils.h
src/phase_functions/: henyeygreenstein.inl  isotropic.inl
src/shapes/: sphere.inl  triangle_mesh.inl
src/tests/: filter.cpp  image.cpp  intersection.cpp  mipmap.cpp
